--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
 							<img src="images/home.png"  />
 						</div>
 					</div>
-
 				</div>
 				<hr class=" col-lg-12" />
 		</div>
@@ -49,52 +48,90 @@
   <section  class="container col-lg-12">
 <!-- Formations -->
 		<div class="row">
-			<div class="col-lg-2"></div>
-  			<div class="col-lg-8">
-					<div class=" timeLine">
-		        <h2>Formations</h2>
-						<div>
-							<p class="">
-			          Lycee du Leon <br /> 29400 Landivisiau
-			        </p>
-			        <p class="floatLeft">
-			          Permis B
-			        </p>
-			        <p class="floatLeft">
-			          Sydney, NSW <br  /> Australie
-			        </p>
-			        <p class="floatLeft">
-			          Ecole des metiers <br />de l`internet.
-			        </p>
-						</div>
+			<div class="col-lg-12">
+				<div class=" timeLine">
+					<img src="images/dysc.png"  />
+	        <h2>Formations</h2>
+					<div class="formTop col-lg-12">
+						<div class="textTop col-lg-3">
+								<p class="col-lg-7" >
+				          Lycee du Leon <br /> 29400 Landivisiau
+				        </p>
+							</div>
+						<div class="textTop col-lg-3">
+								<p class="greenBox col-lg-7" >
+				          Permis B
+								</p>
+							</div>
+						<div class="textTop col-lg-3">
+								<p class="col-lg-7" >
+				          Sydney, NSW <br  /> Australie
+								</p>
+							</div>
+						<div class="textTop col-lg-3">
+								<p class=" greenBox col-lg-7" >
+				          Ecole des metiers <br />de l`internet.
+								</p>
+							</div>
 		      </div>
-	      <div class="">
-	        <p class="floatLeft">
-	          Jun 2010
-	        </p>
-	        <p class="floatLeft">
-	          Novembre 2010
-	        </p>
-	        <p class="floatLeft">
-	          Janvier - Mars 2011
-	        </p>
-	        <p class="floatLeft">
-	          Septembre 2012 ...
-	        </p>
-	      </div>
-	      <div class="">
-	        <p class="floatLeft">
-	          Bac STG <br /> Option Marketing
-	        </p>
-	        <p class="floatLeft">
-	          Navitas <br  />English School
-	        </p>
-	        <p class="floatLeft">
-	          2 place de la bourse <br />75002 Paris
-	        </p>
-	      </div>
+				</div>
 			</div>
-	</div>
+		</div>
+		<div class="row">
+	  	<div class="col-lg-12">
+		  	<div class="borderLine col-lg-12">
+					<div class="col-lg-3"><p></p></div>
+		  		<div class="col-lg-3"><p class="pointTwo"></p></div>
+					<div class="col-lg-3"><p class="pointThree"></p></div>
+					<div class="col-lg-3"><p class="pointFour"></p></div>
+		  	</div>
+		 </div>
+	  </div>
+		<div class="row">
+	   <div class="formMiddle col-lg-12">
+			<div class="textTop col-lg-3">
+				<p class="  col-lg-7" >
+	        Jun 2010
+				</p>
+			</div>
+			<div class="textTop col-lg-3">
+				<p class="  col-lg-7" >
+	        Novembre 2010
+				</p>
+			</div>
+			<div class="textTop textBottom col-lg-3">
+				<p class=" col-lg-7" >
+	        Janvier - Mars 2011
+				</p>
+			</div>
+			<div class="textTop textPadding col-lg-3">
+				<p class="  col-lg-7" >
+	        Septembre 2012 ...
+				</p>
+			</div>
+	   </div>
+		</div>
+
+		<div class="row">
+	    <div class="col-lg-12">
+				<div class="textTop textBottom col-lg-6">
+					<p class="greenBox  col-lg-3" >
+	        Bac STG <br /> Option Marketing
+				</p>
+			</div>
+			<div class="textTop bottomPadding col-lg-3">
+				<p class="greenBox  col-lg-7" >
+	        Navitas <br  />English School
+				</p>
+			</div>
+			<div class="textTop bottomPaddingP col-lg-3">
+				<p class="  col-lg-8" >
+	        2 place de la bourse <br />75002 Paris
+				</p>
+			</div>
+	    </div>
+		</div>
+
 <!-- Formations + Stages -->
     <div class="row">
 			<div class="col-lg-2"></div>
@@ -145,7 +182,6 @@
       	  </div>
     	  </div>
     	</div>
-			<div class="col-lg-2"></div>
 		</div>
 <!-- Competences -->
     <div class="row">
