--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 				          Sydney, NSW <br  /> Australie
 								</p>
 							</div>
-						<div class="textTop col-lg-3">
-								<p class=" greenBox col-lg-7" >
+						<div class="textTop bottomPaddingP col-lg-3">
+								<p class=" greenBox col-lg-11" >
 				          Ecole des metiers <br />de l`internet.
 								</p>
 							</div>
@@ -105,13 +105,12 @@
 				</p>
 			</div>
 			<div class="textTop textPadding col-lg-3">
-				<p class="  col-lg-7" >
+				<p class="  col-lg-12" >
 	        Septembre 2012 ...
 				</p>
 			</div>
 	   </div>
 		</div>
-
 		<div class="row">
 	    <div class="col-lg-12">
 				<div class="textTop textBottom col-lg-6">
@@ -125,122 +124,137 @@
 				</p>
 			</div>
 			<div class="textTop bottomPaddingP col-lg-3">
-				<p class="  col-lg-8" >
+				<p class="  col-lg-12" >
 	        2 place de la bourse <br />75002 Paris
 				</p>
 			</div>
 	    </div>
 		</div>
-
+</section>
 <!-- Formations + Stages -->
+<section class="container experienceBox col-lg-12">
     <div class="row">
-			<div class="col-lg-2"></div>
-      <div class="borderRight col-lg-4">
+      <div class="borderRight col-lg-6">
         <div class="stageBox col-lg-11">
-					<div class="col-lg-8">
+					<div class="stageBorder col-lg-8">
 						<h4>Stage chez Artips</h4>
 	          <p>
 	            Travaux de design et d'integration dans la Start-up. Francaise "Artips". Montreal, CANADA.
 	          </p>
 					</div>
-					<div  class="col-lg-4">
-						<span>Juillet-Aout </span>
-	          <span>2013</span>
+					<div class=" yearBox col-lg-4">
+						<div class="yearText">
+							<span>Juillet-Aout </span>
+		          <span>2013</span>
+						</div>
 					</div>
         </div>
 				<div class="triangle col-lg-1"></div>
         <div class="stageBox col-lg-11">
-					<div class="col-lg-8">
+					<div class=" stageBorder col-lg-8">
 	          <h4>Creation de Mini Rider's</h4>
 	          <p>
-	            Lancdment du forum Mini-render.com site comptabilisant aujourd'hui plus de 1400 visites quotidiennes.
+	            Lancement du forum Mini-rider.com site comptabilisant aujourd'hui plus de 1400 visites quotidiennes.
 	          </p>
 					</div>
-					<div class="col-lg-4">
-	          <span>Novembre </span>
-	          <span>2009</span>
-      	  </div>
+					<div class=" yearBox col-lg-4">
+						<div class="yearText">
+		          <span>Novembre </span>
+		          <span>2009</span>
+      		  </div>
+					</div>
 				</div>
 				<div class="triangle col-lg-1"></div>
       </div>
 <!-- Formations + Experiences -->
-      <div class=" col-lg-4">
+      <div class=" col-lg-6">
 				<div class="triangleRight col-lg-1"></div>
-				<div class="floatRight stageBox col-lg-11">
-					<div class="col-lg-4">
-		        <span>Mars-Mai </span>
-		        <span>2011</span>
+				<img src="images/bag.png"  />
+			  <h2>Experiences</h2>
+				<div class=" stageBox stageBoxMargin col-lg-11">
+					<div class=" yearBoxEx col-lg-4">
+						<div class="stageBorder yearText ">
+			        <span>Mars-Mai </span>
+			        <span>2011</span>
+						</div>
 					</div>
 					<div class="col-lg-8">
-		        <h2>Experiences</h2>
-		        <div>
-		          <h4>Travaus saisonier</h4>
-		          <p>
-		            Saisonier dans la ceuillette de mandarine. Riverton Farm - 4625 Gayndah AUSTRALIE.
-		          </p>
-						</div>
-      	  </div>
+	         <h4>Travaus saisonier</h4>
+	         <p>
+		        Saisonier dans la ceuillette de mandarine. Riverton Farm - 4625 Gayndah AUSTRALIE.
+		       </p>
+					</div>
     	  </div>
     	</div>
 		</div>
+</section>
+
+
+
+
 <!-- Competences -->
+<section class="container  col-lg-12">
     <div class="row">
-			<div class="col-lg-2"></div>
-      <div class="col-lg-4">
+
+      <div class="competencesBox col-lg-6">
+				<img src="images/trybik.png"  />
 				<h2>Competences</h2>
-				<div class="col-lg-3">
-	        <p>
-	          Anglais
-	        </p>
-	        <p>
-	          Suite Office
-	        </p>
-	        <p>
-	          Photoshop
-	        </p>
-	        <p>
-	          Flash
-	        </p>
-	        <p>
-	          Indesign
-	        </p>
-	        <p>
-	          HTML/CSS
-	        </p>
-				</div>
-        <div class="marginTop col-lg-8">
-					<div class="prog">
-						<div class="progBar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
-						</div>
+				<div class="col-lg-12">
+					<div class="competencesList col-lg-3">
+		        <p>
+		          Anglais
+		        </p>
+		        <p>
+		          Suite Office
+		        </p>
+		        <p>
+		          Photoshop
+		        </p>
+		        <p>
+		          Flash
+		        </p>
+		        <p>
+		          Indesign
+		        </p>
+		        <p>
+		          HTML/CSS
+		        </p>
 					</div>
-					<div class="prog">
-						<div class="progBar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
+	        <div class="marginTop col-lg-8">
+						<div class="prog">
+							<div class="progBar one" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
+							</div>
 						</div>
-					</div>
-					<div class="prog">
-						<div class="progBar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%;">
+						<div class="prog">
+							<div class="progBar two" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
+							</div>
 						</div>
-					</div>
-					<div class="prog">
-						<div class="progBar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;">
+						<div class="prog">
+							<div class="progBar three" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%;">
+							</div>
 						</div>
-					</div>
-					<div class="prog">
-						<div class="progBar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%;">
+						<div class="prog">
+							<div class="progBar four" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;">
+							</div>
 						</div>
-					</div>
-					<div class="prog">
-						<div class="progBar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+						<div class="prog">
+							<div class="progBar five" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%;">
+							</div>
+						</div>
+						<div class="prog">
+							<div class="progBar six" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+							</div>
 						</div>
 					</div>
 				</div>
       </div>
 <!-- Interets -->
-      <div class="col-lg-4">
+      <div class="col-lg-6">
 				<div class="col-lg-1"></div>
-				<div class=" col-lg-11">
-					<h2 class="center"> Interets</h2>
-					<div class="circlesBox">
+				<div class="center col-lg-11">
+					<img src="images/heart.png"  />
+					<h2 class=""> Interets</h2>
+					<div class="circlesBox col-lg-12">
 						<p class="sport">
 							Sport
 						</p>
@@ -256,7 +270,6 @@
 					</div>
 				</div>
       </div>
-			<div class="col-lg-2"></div>
     </div>
   </section>
 
