--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 <div class="container">
 	<div class="row">
 		<header>
-			<div class="headerBox col-lg-12 col-md-12 col-sm-12 col-xsm-12 col-sm-12">
-		   	<div class="floatLeft  col-lg-5 col-md-5 col-sm-5 col-xsm-5 col-sm-5">
+			<div class="headerBox col-lg-12 col-md-12 col-sm-12 col-xsm-12">
+		   	<div class="floatLeft  col-lg-5 col-md-5 col-sm-5 col-xsm-12">
 	      	<p class="name">NAME LASTNAME</p>
 	      	<p class="headerTitle">Front-end Developer</p>
 		    </div>
 				<div class="floatLeft circleBox col-lg-3 col-md-3 col-sm-3 col-xsm-3">
 					<p class="circle "></p>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-4 col-xsm-4">
-			    <div class="floatLeft adressBox col-lg-10 col-md-11">
+				<div class="col-lg-4 col-md-4 col-sm-4 col-xsm-9">
+			    <div class="floatLeft adressBox col-lg-10 col-md-11 col-sm-11 col-xsm-11">
 							<p>
 				        20 ans - 17/11/1992
 				      </p>
@@ -34,7 +34,7 @@
 				        35 rue Rivay <br  />92300 Levallois-Perret
 				      </p>
 				    </div>
-					<div class="floatLeft iconBox col-lg-2 col-md-1">
+					<div class="floatLeft iconBox col-lg-2 col-md-1 col-sm-1 col-xsm-1">
 							<img src="images/man.png"  />
 							<img src="images/phone.png"  />
 							<img src="images/mail.png"  />
@@ -52,22 +52,22 @@
 					<img src="images/dysc.png"  />
 	        <h2>Formations</h2>
 					<div class="formTop col-lg-12 col-md-12 col-sm-12 col-xsm-12">
-						<div class="textTop col-lg-3 col-md-3 col-sm-3 col-xsm-3 col-sm-3 col-xsm-3">
+						<div class="textTop col-lg-3 col-md-3 col-sm-3 col-xsm-3">
 								<p class="col-lg-9 col-md-9 col-sm-10 col-xsm-12" >
 				          Lycee du Leon <br /> 29400 Landivisiau
 				        </p>
 							</div>
-						<div class="textTop col-lg-3 col-md-3 col-sm-3 col-xsm-3 col-sm-3 col-xsm-3">
+						<div class="textTop col-lg-3 col-md-3 col-sm-3 col-xsm-3 ">
 								<p class="greenBox col-lg-7 col-md-7 col-sm-7 col-xsm-12" >
 				          Permis B
 								</p>
 							</div>
-						<div class="textTop col-lg-3 col-md-3 col-sm-3 col-xsm-3 col-sm-3 col-xsm-3">
+						<div class="textTop col-lg-3 col-md-3 col-sm-3 col-xsm-3 ">
 								<p class="col-lg-9 col-md-9 col-sm-9 col-xsm-12" >
 				          Sydney, NSW <br  /> Australie
 								</p>
 							</div>
-						<div class="textTop bottomPaddingP col-lg-3 col-md-3 col-sm-3 col-xsm-3 col-sm-3 col-xsm-3">
+						<div class="textTop bottomPaddingP col-lg-3 col-md-3 col-sm-3 col-xsm-3 ">
 								<p class=" greenBox col-lg-11 col-md-11 col-sm-11 col-xsm-12" >
 				          Ecole des metiers <br />de l`internet.
 								</p>
@@ -132,7 +132,7 @@
 <!-- Formations + Stages -->
 	<div class="row">
 		<section class=" experienceBox col-lg-12 col-md-12 col-sm-12 col-xsm-12">
-      <div class="borderRight col-lg-6 col-md-6 col-sm-6 col-xsm-6">
+      <div class="borderRight col-lg-6 col-md-6 col-sm-6 col-xsm-12">
         <div class="stageBox col-lg-11 col-md-11 col-sm-11 col-xsm-11">
 					<div class="stageBorder col-lg-8 col-md-8 col-sm-8 col-xsm-8">
 						<h4>Stage chez Artips</h4>
@@ -147,7 +147,7 @@
 						</div>
 					</div>
         </div>
-				<div class="triangle col-lg-1"></div>
+				<div class="triangle col-lg-1 col-md-1 col-sm-1 col-xsm-1"></div>
         <div class="stageBox col-lg-11 col-md-11 col-sm-11 col-xsm-11">
 					<div class=" stageBorder col-lg-8 col-md-8 col-sm-8 col-xsm-8">
 	          <h4>Creation de Mini Rider's</h4>
@@ -162,10 +162,10 @@
       		  </div>
 					</div>
 				</div>
-				<div class="triangle col-lg-1"></div>
+				<div class="triangle col-lg-1 col-md-1 col-sm-1 col-xsm-1"></div>
       </div>
 <!-- Formations + Experiences -->
-      <div class=" col-lg-6 col-md-6 col-sm-6 col-xsm-6">
+      <div class="borderLeft col-lg-6 col-md-6 col-sm-6 col-xsm-12">
 				<div class="triangleRight col-lg-1"></div>
 				<img src="images/bag.png"  />
 			  <h2>Experiences</h2>
@@ -193,7 +193,7 @@
 <!-- Competences -->
 	<div class="row">
 		<section class="  col-lg-12 col-md-12 col-sm-12 col-xsm-12">
-      <div class="competencesBox col-lg-6 col-md-6 col-sm-6 col-xsm-6">
+      <div class="competencesBox col-lg-6 col-md-6 col-sm-6 col-xsm-12">
 				<img src="images/trybik.png"  />
 				<h2>Competences</h2>
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xsm-12">
@@ -246,8 +246,8 @@
 				</div>
       </div>
 <!-- Interets -->
-      <div class="col-lg-6 col-md-6 col-sm-6 col-xsm-6">
-				<div class="col-lg-1"></div>
+      <div class="col-lg-6 col-md-6 col-sm-6 col-xsm-12">
+				<div class="col-lg-1 col-md-1 col-sm-1 col-xsm-1"></div>
 				<div class="center col-lg-11 col-md-11 col-sm-11 col-xsm-11">
 					<img src="images/heart.png"  />
 					<h2 class=""> Interets</h2>
