--- a/index.html
+++ b/index.html
@@ -8,268 +8,262 @@
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,600,700" rel="stylesheet">
 		<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css"></head>
 <body>
-<div class="container">
-	<div class="row">
-		<header>
-			<div class="headerBox col-lg-12 col-md-12 col-sm-12 col-xsm-12">
-		   	<div class="floatLeft  col-lg-5 col-md-5 col-sm-5 col-xsm-12">
-	      	<p class="name">NAME LASTNAME</p>
-	      	<p class="headerTitle">Front-end Developer</p>
-		    </div>
-				<div class="floatLeft circleBox col-lg-3 col-md-3 col-sm-3 col-xsm-3">
-					<p class="circle "></p>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-4 col-xsm-9">
-			    <div class="floatLeft adressBox col-lg-10 col-md-11 col-sm-11 col-xsm-11">
-							<p>
-				        20 ans - 17/11/1992
-				      </p>
-						  <p>
-				        06 59 09 73 25
-				      </p>
-				      <p>
-				        someone@gmail.com
-				      </p>
-				      <p>
-				        35 rue Rivay <br  />92300 Levallois-Perret
-				      </p>
-				    </div>
-					<div class="floatLeft iconBox col-lg-2 col-md-1 col-sm-1 col-xsm-1">
-							<img src="images/man.png"  />
-							<img src="images/phone.png"  />
-							<img src="images/mail.png"  />
-							<img src="images/home.png"  />
-						</div>
-				</div>
-			</div>
-			<hr class=" col-lg-12 col-md-12 col-sm-12 col-xsm-12" />
-	  </header>
-	</div>
-<!-- Formations -->
-	<div class="row">
-			<div class="col-lg-12 col-md-12 col-sm-12 col-xsm-12">
-				<div class=" timeLine">
-					<img src="images/dysc.png"  />
-	        <h2>Formations</h2>
-					<div class="formTop col-lg-12 col-md-12 col-sm-12 col-xsm-12">
-						<div class="textTop col-lg-3 col-md-3 col-sm-3 col-xsm-3">
-								<p class="col-lg-9 col-md-9 col-sm-10 col-xsm-12" >
-				          Lycee du Leon <br /> 29400 Landivisiau
-				        </p>
-							</div>
-						<div class="textTop col-lg-3 col-md-3 col-sm-3 col-xsm-3 ">
-								<p class="greenBox col-lg-7 col-md-7 col-sm-7 col-xsm-12" >
-				          Permis B
-								</p>
-							</div>
-						<div class="textTop col-lg-3 col-md-3 col-sm-3 col-xsm-3 ">
-								<p class="col-lg-9 col-md-9 col-sm-9 col-xsm-12" >
-				          Sydney, NSW <br  /> Australie
-								</p>
-							</div>
-						<div class="textTop bottomPaddingP col-lg-3 col-md-3 col-sm-3 col-xsm-3 ">
-								<p class=" greenBox col-lg-11 col-md-11 col-sm-11 col-xsm-12" >
-				          Ecole des metiers <br />de l`internet.
-								</p>
-							</div>
-		      </div>
-				</div>
-			</div>
-		</div>
+	<div class="container">
 		<div class="row">
-	  	<div class="col-lg-12 col-md-12 col-sm-12 col-xsm-12">
-		  	<div class="borderLine col-lg-12 col-md-12 col-sm-12 col-xsm-12">
-					<div class="col-lg-3 col-md-3 col-sm-3 col-xsm-3 col-sm-3 col-xsm-3"><p></p></div>
-		  		<div class="col-lg-3 col-md-3 col-sm-3 col-xsm-3"><p class="pointTwo"></p></div>
-					<div class="col-lg-3 col-md-3 col-sm-3 col-xsm-3"><p class="pointThree"></p></div>
-					<div class="col-lg-3 col-md-3 col-sm-3 col-xsm-3"><p class="pointFour"></p></div>
-		  	</div>
-		 </div>
-	  </div>
-		<div class="row">
-	   <div class="formMiddle col-lg-12 col-md-12 col-sm-12 col-xsm-12">
-			<div class="textTop  col-lg-3 col-md-3 col-sm-3 col-xsm-3">
-				<p class="textLeft  col-lg-12 col-md-12 col-sm-12 col-xsm-12" >
-	        Jun 2010
-				</p>
-			</div>
-			<div class="textTop col-lg-3 col-md-3 col-sm-3 col-xsm-3">
-				<p class="textLeft  col-lg-12 col-md-12 col-sm-12 col-xsm-12" >
-	        Novembre 2010
-				</p>
-			</div>
-			<div class="textTop textBottom col-lg-3 col-md-3 col-sm-3 col-xsm-3">
-				<p class="textLeft col-lg-12 col-md-12 col-sm-12 col-xsm-12" >
-	        Janvier - Mars 2011
-				</p>
-			</div>
-			<div class="textTop textPadding col-lg-3 col-md-3 col-sm-3 col-xsm-3">
-				<p class="textLeft  col-lg-12 col-md-12 col-sm-12 col-xsm-12" >
-	        Septembre 2012 ...
-				</p>
-			</div>
-	   </div>
-		</div>
-		<div class="row">
-	    <div class="col-lg-12 col-md-12 col-sm-12 col-xsm-12">
-				<div class="textTop textBottom col-lg-6 col-md-6 col-sm-6 col-xsm-6">
-					<p class="greenBox  col-lg-4 col-md-5 col-sm-5 col-xsm-7" >
-	        Bac STG <br /> Option Marketing
-				</p>
-			</div>
-			<div class="textTop bottomPadding col-lg-3 col-md-3 col-sm-3 col-xsm-3">
-				<p class="greenBox  col-lg-7 col-md-9 col-sm-9 col-xsm-12" >
-	        Navitas <br  />English School
-				</p>
-			</div>
-			<div class="textTop bottomPaddingP col-lg-3 col-md-3 col-sm-3 col-xsm-3">
-				<p class="  col-lg-12 col-md-12 col-sm-12 col-xsm-12" >
-	        2 place de la bourse <br />75002 Paris
-				</p>
-			</div>
-	    </div>
-		</div>
-<!-- Formations + Stages -->
-	<div class="row">
-		<section class=" experienceBox col-lg-12 col-md-12 col-sm-12 col-xsm-12">
-      <div class="borderRight col-lg-6 col-md-6 col-sm-6 col-xsm-12">
-        <div class="stageBox col-lg-11 col-md-11 col-sm-11 col-xsm-11">
-					<div class="stageBorder col-lg-8 col-md-8 col-sm-8 col-xsm-8">
-						<h4>Stage chez Artips</h4>
-	          <p>
-	            Travaux de design et d'integration dans la Start-up. Francaise "Artips". Montreal, CANADA.
-	          </p>
+			<header>
+				<div class="headerBox col-lg-12 col-md-12 col-sm-12 col-xsm-12">
+			   	<div class="floatLeft  col-lg-5 col-md-5 col-sm-5 col-xsm-12">
+		      	<p class="name">NAME LASTNAME</p>
+		      	<p class="headerTitle">Front-end Developer</p>
+			    </div>
+					<div class="floatLeft circleBox col-lg-3 col-md-3 col-sm-3 col-xsm-3">
+						<p class="circle "></p>
 					</div>
-					<div class=" yearBox col-lg-4 col-md-4 col-sm-4 col-xsm-4">
-						<div class="yearText">
-							<span>Juillet-Aout </span>
-		          <span>2013</span>
-						</div>
-					</div>
-        </div>
-				<div class="triangle col-lg-1 col-md-1 col-sm-1 col-xsm-1"></div>
-        <div class="stageBox col-lg-11 col-md-11 col-sm-11 col-xsm-11">
-					<div class=" stageBorder col-lg-8 col-md-8 col-sm-8 col-xsm-8">
-	          <h4>Creation de Mini Rider's</h4>
-	          <p>
-	            Lancement du forum Mini-rider.com site comptabilisant aujourd'hui plus de 1400 visites quotidiennes.
-	          </p>
-					</div>
-					<div class=" yearBox col-lg-4 col-md-4 col-sm-4 col-xsm-4">
-						<div class="yearText">
-		          <span>Novembre </span>
-		          <span>2009</span>
-      		  </div>
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xsm-9">
+				    <div class="floatLeft adressBox col-lg-10 col-md-11 col-sm-11 col-xsm-11">
+								<p>
+					        20 ans - 17/11/1992
+					      </p>
+							  <p>
+					        06 59 09 73 25
+					      </p>
+					      <p>
+					        someone@gmail.com
+					      </p>
+					      <p>
+					        35 rue Rivay <br  />92300 Levallois-Perret
+					      </p>
+					    </div>
+						<div class="floatLeft iconBox col-lg-2 col-md-1 col-sm-1 col-xsm-1">
+								<img src="images/man.png"  />
+								<img src="images/phone.png"  />
+								<img src="images/mail.png"  />
+								<img src="images/home.png"  />
+							</div>
 					</div>
 				</div>
-				<div class="triangle col-lg-1 col-md-1 col-sm-1 col-xsm-1"></div>
-      </div>
-<!-- Formations + Experiences -->
-      <div class="borderLeft col-lg-6 col-md-6 col-sm-6 col-xsm-12">
-				<div class="triangleRight col-lg-1"></div>
-				<img src="images/bag.png"  />
-			  <h2>Experiences</h2>
-				<div class=" stageBox stageBoxMargin col-lg-11 col-md-11 col-sm-11 col-xsm-11">
-					<div class=" yearBoxEx col-lg-4 col-md-4 col-sm-4 col-xsm-4">
-						<div class="stageBorder yearText ">
-			        <span>Mars-Mai </span>
-			        <span>2011</span>
-						</div>
-					</div>
-					<div class="col-lg-8 col-md-8 col-sm-8 col-xsm-8">
-	         <h4>Travaus saisonier</h4>
-	         <p>
-		        Saisonier dans la ceuillette de mandarine. Riverton Farm - 4625 Gayndah AUSTRALIE.
-		       </p>
-					</div>
-    	  </div>
-    	</div>
-		</section>
-	</div>
-
-
-
-
-<!-- Competences -->
-	<div class="row">
-		<section class="  col-lg-12 col-md-12 col-sm-12 col-xsm-12">
-      <div class="competencesBox col-lg-6 col-md-6 col-sm-6 col-xsm-12">
-				<img src="images/trybik.png"  />
-				<h2>Competences</h2>
+				<hr class=" col-lg-12 col-md-12 col-sm-12 col-xsm-12" />
+		  </header>
+		</div>
+	<!-- Formations -->
+		<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xsm-12">
-					<div class="competencesList col-lg-3 col-md-3 col-sm-3 col-xsm-3">
-		        <p>
-		          Anglais
-		        </p>
-		        <p>
-		          Suite Office
-		        </p>
-		        <p>
-		          Photoshop
-		        </p>
-		        <p>
-		          Flash
-		        </p>
-		        <p>
-		          Indesign
-		        </p>
-		        <p>
-		          HTML/CSS
-		        </p>
-					</div>
-	        <div class="marginTop col-lg-8 col-md-8 col-sm-8 col-xsm-8">
-						<div class="prog">
-							<div class="progBar one" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
-							</div>
-						</div>
-						<div class="prog">
-							<div class="progBar two" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
-							</div>
-						</div>
-						<div class="prog">
-							<div class="progBar three" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%;">
-							</div>
-						</div>
-						<div class="prog">
-							<div class="progBar four" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;">
-							</div>
-						</div>
-						<div class="prog">
-							<div class="progBar five" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%;">
-							</div>
-						</div>
-						<div class="prog">
-							<div class="progBar six" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-							</div>
-						</div>
+					<div class=" timeLine">
+						<img src="images/dysc.png"  />
+		        <h2>Formations</h2>
+						<div class="formTop col-lg-12 col-md-12 col-sm-12 col-xsm-12">
+							<div class="textTop col-lg-3 col-md-3 col-sm-3 col-xsm-3">
+									<p class="col-lg-9 col-md-9 col-sm-10 col-xsm-12" >
+					          Lycee du Leon <br /> 29400 Landivisiau
+					        </p>
+								</div>
+							<div class="textTop col-lg-3 col-md-3 col-sm-3 col-xsm-3 ">
+									<p class="greenBox col-lg-7 col-md-7 col-sm-7 col-xsm-12" >
+					          Permis B
+									</p>
+								</div>
+							<div class="textTop col-lg-3 col-md-3 col-sm-3 col-xsm-3 ">
+									<p class="col-lg-9 col-md-9 col-sm-9 col-xsm-12" >
+					          Sydney, NSW <br  /> Australie
+									</p>
+								</div>
+							<div class="textTop bottomPaddingP col-lg-3 col-md-3 col-sm-3 col-xsm-3 ">
+									<p class=" greenBox col-lg-11 col-md-11 col-sm-11 col-xsm-12" >
+					          Ecole des metiers <br />de l`internet.
+									</p>
+								</div>
+			      </div>
 					</div>
 				</div>
-      </div>
-<!-- Interets -->
-      <div class="col-lg-6 col-md-6 col-sm-6 col-xsm-12">
-				<div class="col-lg-1 col-md-1 col-sm-1 col-xsm-1"></div>
-				<div class="center col-lg-11 col-md-11 col-sm-11 col-xsm-11">
+			</div>
+			<div class="row">
+		  	<div class="col-lg-12 col-md-12 col-sm-12 col-xsm-12">
+			  	<div class="borderLine col-lg-12 col-md-12 col-sm-12 col-xsm-12">
+						<div class="col-lg-3 col-md-3 col-sm-3 col-xsm-3 col-sm-3 col-xsm-3"><p></p></div>
+			  		<div class="col-lg-3 col-md-3 col-sm-3 col-xsm-3"><p class="pointTwo"></p></div>
+						<div class="col-lg-3 col-md-3 col-sm-3 col-xsm-3"><p class="pointThree"></p></div>
+						<div class="col-lg-3 col-md-3 col-sm-3 col-xsm-3"><p class="pointFour"></p></div>
+			  	</div>
+			 </div>
+		  </div>
+			<div class="row">
+		   <div class="formMiddle col-lg-12 col-md-12 col-sm-12 col-xsm-12">
+				<div class="textTop  col-lg-3 col-md-3 col-sm-3 col-xsm-3">
+					<p class="textLeft  col-lg-12 col-md-12 col-sm-12 col-xsm-12" >
+		        Jun 2010
+					</p>
+				</div>
+				<div class="textTop col-lg-3 col-md-3 col-sm-3 col-xsm-3">
+					<p class="textLeft  col-lg-12 col-md-12 col-sm-12 col-xsm-12" >
+		        Novembre 2010
+					</p>
+				</div>
+				<div class="textTop textBottom col-lg-3 col-md-3 col-sm-3 col-xsm-3">
+					<p class="textLeft col-lg-12 col-md-12 col-sm-12 col-xsm-12" >
+		        Janvier - Mars 2011
+					</p>
+				</div>
+				<div class="textTop textPadding col-lg-3 col-md-3 col-sm-3 col-xsm-3">
+					<p class="textLeft  col-lg-12 col-md-12 col-sm-12 col-xsm-12" >
+		        Septembre 2012 ...
+					</p>
+				</div>
+		   </div>
+			</div>
+			<div class="row">
+		    <div class="col-lg-12 col-md-12 col-sm-12 col-xsm-12">
+					<div class="textTop textBottom col-lg-6 col-md-6 col-sm-6 col-xsm-6">
+						<p class="greenBox  col-lg-4 col-md-5 col-sm-5 col-xsm-7" >
+		        Bac STG <br /> Option Marketing
+					</p>
+				</div>
+				<div class="textTop bottomPadding col-lg-3 col-md-3 col-sm-3 col-xsm-3">
+					<p class="greenBox  col-lg-7 col-md-9 col-sm-9 col-xsm-12" >
+		        Navitas <br  />English School
+					</p>
+				</div>
+				<div class="textTop bottomPaddingP col-lg-3 col-md-3 col-sm-3 col-xsm-3">
+					<p class="  col-lg-12 col-md-12 col-sm-12 col-xsm-12" >
+		        2 place de la bourse <br />75002 Paris
+					</p>
+				</div>
+		    </div>
+			</div>
+	<!-- Formations + Stages -->
+		<div class="row">
+			<section class=" experienceBox col-lg-12 col-md-12 col-sm-12 col-xsm-12">
+	      <div class="borderRight col-lg-6 col-md-6 col-sm-6 col-xsm-12">
+	        <div class="stageBox col-lg-11 col-md-11 col-sm-11 col-xsm-11">
+						<div class="stageBorder col-lg-8 col-md-8 col-sm-8 col-xsm-8">
+							<h4>Stage chez Artips</h4>
+		          <p>
+		            Travaux de design et d'integration dans la Start-up. Francaise "Artips". Montreal, CANADA.
+		          </p>
+						</div>
+						<div class=" yearBox col-lg-4 col-md-4 col-sm-4 col-xsm-4">
+							<div class="yearText">
+								<span>Juillet-Aout </span>
+			          <span>2013</span>
+							</div>
+						</div>
+	        </div>
+					<div class="triangle col-lg-1 col-md-1 col-sm-1 col-xsm-1"></div>
+	        <div class="stageBox col-lg-11 col-md-11 col-sm-11 col-xsm-11">
+						<div class=" stageBorder col-lg-8 col-md-8 col-sm-8 col-xsm-8">
+		          <h4>Creation de Mini Rider's</h4>
+		          <p>
+		            Lancement du forum Mini-rider.com site comptabilisant aujourd'hui plus de 1400 visites quotidiennes.
+		          </p>
+						</div>
+						<div class=" yearBox col-lg-4 col-md-4 col-sm-4 col-xsm-4">
+							<div class="yearText">
+			          <span>Novembre </span>
+			          <span>2009</span>
+	      		  </div>
+						</div>
+					</div>
+					<div class="triangle col-lg-1 col-md-1 col-sm-1 col-xsm-1"></div>
+	      </div>
+	<!-- Formations + Experiences -->
+	      <div class="borderLeft col-lg-6 col-md-6 col-sm-6 col-xsm-12">
+					<div class="triangleRight col-lg-1"></div>
+					<img src="images/bag.png"  />
+				  <h2>Experiences</h2>
+					<div class=" stageBox stageBoxMargin col-lg-11 col-md-11 col-sm-11 col-xsm-11">
+						<div class=" yearBoxEx col-lg-4 col-md-4 col-sm-4 col-xsm-4">
+							<div class="stageBorder yearText ">
+				        <span>Mars-Mai </span>
+				        <span>2011</span>
+							</div>
+						</div>
+						<div class="col-lg-8 col-md-8 col-sm-8 col-xsm-8">
+		         <h4>Travaus saisonier</h4>
+		         <p>
+			        Saisonier dans la ceuillette de mandarine. Riverton Farm - 4625 Gayndah AUSTRALIE.
+			       </p>
+						</div>
+	    	  </div>
+	    	</div>
+			</section>
+		</div>
+	<!-- Competences -->
+		<div class="row">
+			<section class="col-lg-12 col-md-12 col-sm-12 col-xsm-12">
+	      <div class="competencesBox col-lg-6 col-md-6 col-sm-6 col-xsm-12">
+					<img src="images/trybik.png"  />
+					<h2>Competences</h2>
+					<div class="col-lg-12 col-md-12 col-sm-12 col-xsm-12">
+						<div class="competencesList col-lg-3 col-md-3 col-sm-3 col-xsm-3">
+			        <p>
+			          Anglais
+			        </p>
+			        <p>
+			          Suite Office
+			        </p>
+			        <p>
+			          Photoshop
+			        </p>
+			        <p>
+			          Flash
+			        </p>
+			        <p>
+			          Indesign
+			        </p>
+			        <p>
+			          HTML/CSS
+			        </p>
+						</div>
+		        <div class="marginTop col-lg-8 col-md-8 col-sm-8 col-xsm-8">
+							<div class="prog">
+								<div class="progBar one" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
+								</div>
+							</div>
+							<div class="prog">
+								<div class="progBar two" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
+								</div>
+							</div>
+							<div class="prog">
+								<div class="progBar three" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%;">
+								</div>
+							</div>
+							<div class="prog">
+								<div class="progBar four" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;">
+								</div>
+							</div>
+							<div class="prog">
+								<div class="progBar five" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%;">
+								</div>
+							</div>
+							<div class="prog">
+								<div class="progBar six" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+								</div>
+							</div>
+						</div>
+					</div>
+	      </div>
+	<!-- Interets -->
+				<div class="center col-lg-6 col-md-6 col-sm-6 col-xsm-12">
 					<img src="images/heart.png"  />
-					<h2 class=""> Interets</h2>
-					<div class="circlesBox col-lg-12 col-md-12 col-sm-12 col-xsm-12">
-						<p class="sport">
-							Sport
-						</p>
-						<p class="musique">
-							Musique
-						</p>
-						<p class="webdesign">
-							Webdesign
-						</p>
-						<p class="cinema">
-							Cinema
-						</p>
+					<h2>Interets</h2>
+					<div class="col-lg-12 col-md-12 col-sm-12 col-xsm-12">
+						<div class=" circlesBox col-lg-12 col-md-12 col-sm-12 col-xsm-9">
+							<p class="sport">
+								Sport
+							</p>
+							<p class="musique">
+								Musique
+							</p>
+							<p class="webdesign">
+								Webdesign
+							</p>
+							<p class="cinema">
+								Cinema
+							</p>
+						</div>
 					</div>
 				</div>
-      </div>
-  	</section>
+	  	</section>
+		</div>
 	</div>
-
-</div>
 </body>
 </html>
