--- a/index.html
+++ b/index.html
@@ -243,20 +243,20 @@
 	      </div>
 	<!-- Interets -->
 				<div class="center col-lg-6 col-md-6 col-sm-6 col-xsm-12">
-					<img src="images/heart.png"  />
+					<img class="heart" src="images/heart.png"  />
 					<h2>Interets</h2>
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xsm-12">
 						<div class=" circlesBox col-lg-12 col-md-12 col-sm-12 col-xsm-9">
-							<p class="sport">
+							<p class="sport bounceIn">
 								Sport
 							</p>
-							<p class="musique">
+							<p class="musique bounceIn">
 								Musique
 							</p>
-							<p class="webdesign">
+							<p class="webdesign bounceIn">
 								Webdesign
 							</p>
-							<p class="cinema">
+							<p class="cinema bounceIn">
 								Cinema
 							</p>
 						</div>
